Opened 12 years ago
Closed 11 years ago
#9534 closed bug (fixed)
[ActivityMonitor] Settings can't be opened if Always on top is enabled
Reported by: | diver | Owned by: | leavengood |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/ActivityMonitor | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
See hrev45344.
Attachments (4)
Change History (19)
by , 11 years ago
Attachment: | 0001-activity-monitor-settings.patch added |
---|
comment:1 by , 11 years ago
patch: | 0 → 1 |
---|
comment:2 by , 11 years ago
comment:3 by , 11 years ago
Freeman, thanks for the patch. Here are my remarks:
- I'd just add a method IsAlwaysOnTop() in ActivityWindow.h instead of using a constructor parameter.
- fAlwaysOnTop is not a boolean but a pointer to a BMenuItem.
- method or function parameter names begin with a lowercase character.
follow-up: 5 comment:4 by , 11 years ago
Do you mean to use the function as the parameter? Like new SettingWindow(this, _IsAlwaysOnTop());
follow-up: 6 comment:5 by , 11 years ago
Replying to Freeman:
Do you mean to use the function as the parameter? Like new SettingWindow(this, _IsAlwaysOnTop());
No, I mean that IsAlwaysOnTop() can be called in the SettingsWindow constructor.
follow-up: 7 comment:6 by , 11 years ago
Replying to korli:
Replying to Freeman:
Do you mean to use the function as the parameter? Like new SettingWindow(this, _IsAlwaysOnTop());
No, I mean that IsAlwaysOnTop() can be called in the SettingsWindow constructor.
How is the method in ActivityWindow going to be called by the constructor of SettingsWindow?
comment:7 by , 11 years ago
Replying to Freeman:
How is the method in ActivityWindow going to be called by the constructor of SettingsWindow?
target->IsAlwaysOnTop()
by , 11 years ago
Attachment: | 0001-activity-monitor-settings.2.patch added |
---|
comment:9 by , 11 years ago
Yeah I think I messed up my source by using reset --hard. Hold on I'll fix the code.
by , 11 years ago
Attachment: | 0001-activitymonitor-settings.patch added |
---|
comment:10 by , 11 years ago
Your patch includes an unneeded modification of the line 41/42 of ActivityWindow.h. Please fix. Also ActivityWindow::IsAlwaysOnTop() should be const.
by , 11 years ago
Attachment: | 0001-activitymonitor-settings.2.patch added |
---|
comment:11 by , 11 years ago
On a second thought, the feel shouldn't be changed if the ActivityWindow isn't always on top. Or do you have a good reason for that?
comment:13 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Edited and applied in hrev46476.
comment:14 by , 11 years ago
Resolution: | fixed |
---|---|
Status: | closed → reopened |
Something is still not right.
- Settings->Settings
- Settings->Always on top
After that you can't open Settings window anymore.
comment:15 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | reopened → closed |
Fixed in hrev46477. Thanks for testing!
BTW having both a settings window and a settings menu for a simple app seems over the top.
(This is the same in MediaPlayer.)