ActivityMonitor: Settings now modal when always on top enabled.

* #9534

Signed-off-by: Jérôme Duval <jerome.duval@gmail.com>